clusters/pi/home/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: home
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      name: overseerr
      namespace: home
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: lscr.io/linuxserver/overseerr:1.33.2
        ports:
        - containerPort: 5055
          name: overseerr-port

        volumeMounts:
          - name: nfs-volume
            mountPath: /config

      volumes:
        - name: nfs-volume
          nfs:
            server: 192.168.86.10
            path: /nfs/configs/overseerr/config
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: home
  # annotations:
    # metallb.universe.tf/loadBalancerIPs: 192.168.86.201
spec:
  selector:
    app: overseerr
  ports:
  - name: overseerr-port
    port: 80
    targetPort: overseerr-port
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: home
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              name: overseerr-port
