clusters/pi/home/sonarr4k.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr4k
  namespace: home
  labels:
    app: sonarr4k
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr4k
  template:
    metadata:
      name: sonarr4k
      namespace: home
      labels:
        app: sonarr4k
    spec:
      containers:
      - name: sonarr4k
        image: lscr.io/linuxserver/sonarr:3.0.10.1567-ls204
        ports:
        - containerPort: 8989
          name: sonarr4k-port

        volumeMounts:
          - name: nfs-volume
            mountPath: /config
          - name: media-root
            mountPath: /media

      volumes:
        - name: nfs-volume
          nfs:
            server: 192.168.86.10
            path: /nfs/configs/sonarr4k/config
            readOnly: false
        - name: media-root
          nfs:
            server: 192.168.86.10
            path: /nfs/media
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr4k
  namespace: home
spec:
  selector:
    app: sonarr4k
  ports:
  - name: sonarr4k-port
    port: 80
    targetPort: sonarr4k-port
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr4k-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.sonarr4k.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: sonarr4k
          port: 80
    - match: Host(`sonarr4k.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: sonarr4k
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
